--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,11 +14,8 @@
         <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="News from US and around tthe world" />
-        <meta
-            name="description"
-            content="Web site created using create-react-app"
-        />
+        <meta name="description" content="Read Latest News, Headlines, Top News today, Breaking News Online | Happening24" />
+        
         <link rel="apple-touch-icon" href="logo192.png" />
 
         <link
