--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-9X1MYB83FQ');
 </script>
         <meta charset="utf-8" />
-        <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Read Latest News, Headlines, Top News today, Breaking News Online | Happening24" />
@@ -35,7 +35,7 @@
             rel="stylesheet"
         />
 
-        <title>Read Latest News, Headlines, Top News today, Breaking News Online | Happening24</title>
+        <!-- <title>Read Latest News, Headlines, Top News today, Breaking News Online | Happening24</title> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
